<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstriantlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/mainAppbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tab"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/mainImageviewLogo"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:visibility="visible" />

    <Button
        android:id="@+id/mainButtonContinuous"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:background="@color/buttons"
        android:contentDescription="@string/button1desc"
        android:fontFamily="monospace"
        android:text="@string/button1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainAppbarlayout" />

    <Button
        android:id="@+id/mainButtonSfrp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/buttons"
        android:contentDescription="@string/button2desc"
        android:fontFamily="monospace"
        android:text="@string/button2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonContinuous" />

    <Button
        android:id="@+id/mainButtonLaminate"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/buttons"
        android:contentDescription="@string/button3desc"
        android:fontFamily="monospace"
        android:text="@string/button3"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonSfrp" />

</android.support.constraint.ConstraintLayout>